syntax = "proto3";

//option java_multiple_files = true;
option java_package = "com.platon.rosettaflow.grpc.service";
package rpcapi;

//  ------------------------  common  ------------------------

// 系统本身资源抽象
message ResourceUsedDetail {
    uint64 total_mem = 1;             // 服务系统的总内存 (单位: byte)
    uint64 total_processor = 2;       // 服务的总内核数 (单位: 个)
    uint64 total_bandwidth = 3;       // 服务的总带宽数 (单位: bps)
    uint64 total_disk = 4;            // 服务的总磁盘空间 (单位: byte)
    uint64 used_mem = 5;              // 服务系统的已用内存 (单位: byte)
    uint64 used_processor = 6;        // 服务的已用内核数 (单位: 个)
    uint64 used_bandwidth = 7;        // 服务的已用带宽数 (单位: bps)
    uint64 used_disk = 8;             // 服务的医用磁盘空间 (单位: byte)
}



// 组织(节点)唯一标识抽象
message OrganizationIdentityInfo  {
    string name = 1;                           // 组织名称
    string node_id = 2;                        // 组织中调度服务的 nodeId
    string identity_id = 3;                    // 组织的身份标识Id
}

message TaskOrganizationIdentityInfo {
    string party_id = 1;                       // 任务里面定义的 (p0 -> pN 方 ...)
    string name = 2;                           // 组织名称
    string node_id = 3;                        // 组织中调度服务的 nodeId
    string identity_id = 4;                    // 组织的身份标识Id
}




message EmptyGetParams {}

message SimpleResponseCode {
    int32  status = 1;                      // 响应码
    string msg = 2;                         // 错误信息
}


enum UserType {
    Unknown = 0;
    ETH = 1;
    ATP = 2;
    LAT = 3;
}
